--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "framer-motion": "^11.1.5",
     "lucide-react": "^0.295.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
@@ -32,6 +33,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
